Bug 399427, don't update caret position when a xul element is focused, r=neil, sr=roc